--- a/src/html/_header-auth.htm
+++ b/src/html/_header-auth.htm
@@ -1,7 +1,9 @@
 <header class="header auth">
   <div class="header__container __container">
     <div class="head-left">
-      <img class="header__logo" src="img/logo.svg" alt="logo" />
+      <!-- <img class="header__logo" src="img/logo.svg" alt="logo" /> -->
+      <!-- <img class="header__logo" src="../img/logo-na-mars-com.svg" alt="logo" /> -->
+      <img class="header__logo" src="../img/logo-na-mars-ru.svg" alt="logo" />
     </div>
     @@include('_search.htm',{})
     <div class="header__buttons">
